# aoClib

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/: days.h
include/aocutil/: compiler.h  fileops.h  math.h  panstring-t.h  panstring.h  token.h
input/: day4.txt
src/: main.c
src/days/: day4.c
util/: run_valgrind.sh  setup_tools.sh
